--- a/rannidashboards/my-react-app/package.json
+++ b/rannidashboards/my-react-app/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^2.13.0-alpha.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
